# VoxCPM-TTS-Tool

./: .gitignore  README.md  app.py  fix.ps1  mutagen.config.yml  pyproject.toml  requirements.txt  run.ps1  run.sh  start.ps1  sync-to-local.ps1
docs/superpowers/plans/: 2026-04-26-generation-table-view-impl.md  2026-04-26-voxcpm-tts-tool.md  2026-04-27-flatten-generation-tab-impl.md
docs/superpowers/specs/: 2026-04-26-generation-table-view-design.md  2026-04-26-voice-library-edit-and-controls-design.md  2026-04-26-voxcpm-tts-tool-design.md  2026-04-27-flatten-generation-tab-design.md
src/voxcpm_tts_tool/: app_state.py  generation.py  i18n.py  long_text.py  model_resolver.py  output_writer.py  script_parser.py  torch_compat.py  transcription.py  ui_callbacks.py  voice_library.py  voxcpm_patch.py
tests/: conftest.py  test_app_state.py  test_cli.py  test_generation.py  test_i18n.py  test_long_text.py  test_model_resolver.py  test_output_writer.py  test_script_parser.py  test_torch_compat.py  test_transcription.py  test_ui_callbacks.py  test_voice_library.py  test_voxcpm_patch.py
