[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voxcpm-tts-tool"
version = "0.1.0"
description = "Standalone Gradio TTS tool wrapping the voxcpm SDK"
requires-python = ">=3.10,<3.13"
# Mirrors requirements.txt; the launcher (run.sh / run.ps1) installs from
# requirements.txt, then installs voxcpm separately with --no-deps because
# voxcpm's torchcodec dependency has no Windows wheels.
dependencies = [
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "transformers>=4.36.2",
    "einops",
    "inflect",
    "addict",
    "wetext",
    "datasets>=3,<4",
    "pydantic",
    "tqdm",
    "simplejson",
    "sortedcontainers",
    "librosa",
    "matplotlib",
    "argbind",
    "safetensors",
    "gradio>=6,<7",
    "numpy",
    "soundfile",
    "huggingface_hub",
    "modelscope",
    "funasr",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
